fix: hamburger placement on mobile

--- a/templates/1/css/navbar.css
+++ b/templates/1/css/navbar.css
@@ -83,7 +83,6 @@ header#navbar .nav_container ul > li > ul > li > a {
 
 .ddFadeFast {
     transition: all .35s ease-in-out;
-/*    transition-delay: .35s;*/
 }
 
 li:hover ul.hov {
@@ -114,8 +113,8 @@ header#navbar .nav_container ul > li > ul a:hover {
     width: 25px;
     height: 24px;
     position: fixed;
-    right: 15px;
-    top: 15px;
+    right: 10px;
+    top: 10px;
     cursor: pointer;
 }
 
@@ -130,8 +129,8 @@ header#navbar .nav_container ul > li > ul a:hover {
 
 #close {
     position: fixed;
-    top: 10px;
-    right: 13px;
+    top: 0;
+    right: 0;
     width: 30px;
     height: 30px;
     z-index: 1200;
@@ -215,7 +214,7 @@ header#navbar .nav_container ul > li > ul a:hover {
 
     #close {
         transition: all .35s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-        transform: translateX(40px);
+        transform: translateX(50px);
         display: block;
         z-index: 1;
     }
@@ -297,7 +296,7 @@ header#navbar .nav_container ul > li > ul a:hover {
     }
 
     header#navbar.showNav #hamburger {
-        transform: translateX(40px);
+        transform: translateX(50px);
     }
 
     header#navbar.showNav #close {
